--- a/sales_order_products/templates/salesorderproducts/display_sop.html
+++ b/sales_order_products/templates/salesorderproducts/display_sop.html
@@ -9,7 +9,7 @@
 
 <h1 class="page-title">Sales Order Products</h1>
 <br><br>
-<form method="get" novalidate>
+<form method="get" novalidate style="width: 560px;">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Search</button>
