--- a/users/templates/registration/login.html
+++ b/users/templates/registration/login.html
@@ -4,7 +4,7 @@
 
 <h2>Login</h2>
 <br /><br />
-<form action="" method="POST">
+<form action="" method="POST" style="width:560px">
     {% csrf_token %}
     <form>
         <div class="mb-3">
