--- a/customer_ledger_entries/templates/CustomerLedgerEntry/display_customer_ledger_entries.html
+++ b/customer_ledger_entries/templates/CustomerLedgerEntry/display_customer_ledger_entries.html
@@ -8,7 +8,8 @@
 {% block content %}
 
 <h1 class="page-title">Customer Ledger Entries</h1>
-<form method="get" novalidate>
+<br><br>
+<form method="get" novalidate style="width: 560px;">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Search</button>
