--- a/customers/templates/Customers/display_customers.html
+++ b/customers/templates/Customers/display_customers.html
@@ -7,7 +7,8 @@
 {% endblock %}
 {% block content %}
 <h1 class="page-title">Customers</h1>
-<form method="get" novalidate>
+<br><br>
+<form method="get" novalidate style="width: 560px;">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Search</button>
