--- a/customers/templates/Customers/save_Customer.html
+++ b/customers/templates/Customers/save_Customer.html
@@ -1,7 +1,13 @@
 {% extends 'base.html' %}
 
+{% block extra_nav %}
+<li class="nav-item">
+    <a class="nav-link" href="/customers/get/">Customers</a>
+</li>
+{% endblock %}
 {% block content %}
 <h1>Customers</h1>
+<br><br><br>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
