--- a/products/templates/Products/save_Product.html
+++ b/products/templates/Products/save_Product.html
@@ -1,7 +1,14 @@
 {% extends 'base.html' %}
 
+{% block extra_nav%}
+<li class="nav-item">
+    <a class="nav-link" href="/products/get/" style="color: white;">Products</a>
+</li>
+{% endblock %}
+
 {% block content %}
 <h1>Products</h1>
+<br><br><br>
 <form method="post">
     {% csrf_token %}
     {{ form.as_p }}
