--- a/sales_invoices/templates/SalesInvoice/display_sales_invoice.html
+++ b/sales_invoices/templates/SalesInvoice/display_sales_invoice.html
@@ -8,7 +8,7 @@
 {% block content %}
 
 <h1 class="page-title">Sales Invoices</h1>
-<form method="get" novalidate>
+<form method="get" novalidate  novalidate style="width: 560px;">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Search</button>
