--- a/home/templates/home/dashboard.html
+++ b/home/templates/home/dashboard.html
@@ -4,8 +4,7 @@
 
 <div class="container" style="text-align: center;">
     <br>
-    <div class="jumbotron" style="background-color: #35A29F; color: white; border-radius: 20px;">
-        <i class="fas fa-comments fa-5x float-left" style="margin-left: 30px;"></i>
+    <div class="jumbotron">
         <h1>Welcome to ChatCraft CRM</h1>
         <br>
         <p>Your trusted platform for managing customer relationships.</p>
